ReSTIR DI S0+S1: emitter light collection + RIS NEE (GPU-verified)
S0 — light collection (CPU): per-material 16x16 emission grids compiled
at the resource epoch (RtEmissionGrid, premultiplied albedo*mask per
shaded emission source; lava colored via the lava_still albedo grid);
RtLightCollector builds one rectangle area light per emissive quad on
the meshing worker (footprint bounding rect, energy-preserving mean Le,
sprite-local UV frame for the future exact-Le fetch) and stamps NEE
membership into TerrainPrim.flags bit 0; the global light buffer is
flattened in applyBuildChanges (rebased world space, graphics-fence
retirement, atomic with the instance list).

S1 — RIS NEE (shaders): Light struct + WorldPush lightBufAddr/
lightCount/risCandidates; world.rchit forwards membership as payload
bit 7; world.rgen streams M uniform candidates through a weighted
reservoir (target p-hat = luminance(f*Le*G*area), rectangle sampling,
pdf 1/area) and spends one shadow ray on the survivor per diffuse
vertex, additive with the sun NEE; the direct-hit emission term is
gated for in-buffer emitters on diffuse continuation rays only, so
specular/dielectric-seen emitters and excluded emitters still gather
(no energy lost, bit-identical to legacy with risCandidates=0).

Config: caustica.rt.risCandidates (default 8, 0=off), lightMinFillRatio,
lightStats, lightDump, lightDumpRadius.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>